--- a/index.html
+++ b/index.html
@@ -1,2 +1,6 @@
-Hello, this is my rocket taking off: |                   
-                                                <<<<<<<<<<<|====================>
+<html lang = "en-US">
+  <body>
+    <h1 style="text-align:center;" style="font-family:verdana;" > My Projects </h1>
+  </body>
+  
+</html>
