--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <html lang = "en-US">
-  <body>
-    <h1 style="text-align:center;" style="font-family:verdana;" > My Projects </h1>
-  </body>
+  <head>
+  <style>
+    body {"background-color:#7E63FF"}
+    h1   {color:black  "text-align:center;" "font-family:verdana;"}
+    p    {color:black}
+  </style>
+  </head>
   
+  <body>
+    
+    <h1>My Projects</h1>
+ 
+  </body>
 </html>
