--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html lang = "en-US">
   <head>
   <style>
-    body {"background-color:#7E63FF"}
-    h1   {color:black  "text-align:center;" "font-family:verdana;"}
+    body {background-color:#7E63FF}
+    h1   {color:black  text-align:center font-family:verdana}
     p    {color:black}
   </style>
   </head>
