--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
   <head>
   <style>
     body {background-color:#7E63FF}
-    h1   {color:black  text-align:center font-family:verdana}
+    h1   {
+          color:black;
+          text-align:center;
+          font-family:verdana;
+          }
     p    {color:black}
   </style>
   </head>
