--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html lang = "en-US">
   <head>
   <style>
-    body {background-color:#7E63FF}
+    body {background-color:#6C5CC4}
     h1   {
-          color:black;
+          background-color:#F4FFF5;
           text-align:center;
           font-family:verdana;
           }
