--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     h1   {
           background-color:#F4FFF5;
           text-align:center;
-          font-family:verdana;
+          font-family:georgia;
           }
-    p    {color:black}
+    p    {
+           background-color:#F4FFF5
+           font-family:georgia;
+          }
   </style>
   </head>
   
