--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html lang = "en-US">
   <head>
   <style>
-    body {background-color:#6C5CC4}
+    body {background-color:#544899}
     h1   {
-          background-color:#F4FFF5;
+          text-color:#F4FFF5;
           text-align:center;
           font-family:georgia;
           }
     p    {
-           background-color:#F4FFF5
+           text-color:#F4FFF5
            font-family:georgia;
           }
   </style>
