--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <style>
     body {background-color:#544899}
     h1   {
-          text-color:#F4FFF5;
+          font-color:#F4FFF5;
           text-align:center;
           font-family:georgia;
           }
     p    {
-           text-color:#F4FFF5
+           font-color:#F4FFF5
            font-family:georgia;
           }
   </style>
