--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
           text-align:center;
           font-family:georgia;
           }
+    h2   {
+           font-color:#F4FFF5;
+           text-align:center;
+           font-family:georgia;
+         }
     p    {
            font-color:#F4FFF5
            font-family:georgia;
@@ -15,8 +20,13 @@
   </head>
   
   <body>
-    
+    <br>
     <h1>My Projects</h1>
- 
+    <br>
+    <br>
+    <br>
+    <h2>Programmable Christmas Tree</h2>
+    <br>
+    
   </body>
 </html>
