--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <style>
     body {background-color:#544899}
     h1   {
-          font-color:#F4FFF5;
+          font-color:"#F4FFF5";
           text-align:center;
           font-family:georgia;
           }
     h2   {
-           font-color:#F4FFF5;
+           font-color:"#F4FFF5";
            text-align:center;
            font-family:georgia;
          }
     p    {
-           font-color:#F4FFF5
+           font-color:"#F4FFF5"
            font-family:georgia;
           }
   </style>
