--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
   <head>
   <style>
     body {background-color:#544899}
+    title{
+          font-color:"#F4FFF5";
+          text-align:center;
+          font-family:georgia;
+         }
     h1   {
           font-color:"#F4FFF5";
           text-align:center;
@@ -21,11 +26,11 @@
   
   <body>
     <br>
-    <h1>My Projects</h1>
+    <title>My Projects</title>
     <br>
     <br>
     <br>
-    <h2>Programmable Christmas Tree</h2>
+    <h1>Programmable Christmas Tree</h1>
     <br>
     
   </body>
