--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     <p>
     </p>
     <h1>Programmable Christmas Tree</h1>
-    
+    <p>
+      Consists of 5 circular levels and a star. Tree consists of 199 leds total, with 27 individually addressible options. Utilizes 4 shift registers (HC...)
+      connected to 4 arduino pins for data, in addition to 4 clock and latch pins for the registers. Refresh rate of x hz.
     <br>
     
   </body>
