--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   
   <body>
     <br>
-    <title>My Projects</title>
+    <title>Jakub's Projects</title>
     <p>
     </p>
     <h1>Programmable Christmas Tree</h1>
@@ -30,15 +30,13 @@
       Consists of 5 circular levels and a star. Tree consists of 199 leds total, with 27 individually addressible options. Utilizes 4 shift registers (HC...)
       connected to 4 arduino pins for data, in addition to 4 clock and latch pins for the registers. Refresh rate of x hz.
     </p>
-    <p>
-    </p>
+    <hr>
     <h1>Robot Arm</h1>
     <br>
     <p>
       Consists of 5 motors (3 servo, 2 stepper) which give x degrees of freedoom. Able to pick up items weighting up to x kilograms.
     </p>
-     <p>
-    </p>
+    <hr>
     <br>
     
   </body>
