--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   
   <body>
     <br>
-    <title>Jakub's Projects</title>
-    <p>
-    </p>
+    <title>My Projects</title>
+    <h1><b>My Projects</b></h1>
+    
     <h1>Programmable Christmas Tree</h1>
     <br>
     <p>
