--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
   </head>
   
   <body>
-    <br>
+    
     <title>My Projects</title>
     <h1><b>My Projects</b></h1>
-    
+    <p> A documentary of projects I've built </p>
+    <br>
+    <hr>
+    <br>
     <h1>Programmable Christmas Tree</h1>
     <br>
     <p>
