--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
            font-family:georgia;
          }
     p    {
-           font-color:"#F4FFF5"
+           font-size:30px;
+           font-color:#F4FFF5;
+           text-align:center;
            font-family:georgia;
           }
   </style>
