--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <style>
     body {background-color:#544899}
     h1   {
-          font-color:"#F4FFF5";
+          color:"#F4FFF5";
           text-align:center;
           font-family:georgia;
           }
     h2   {
-           font-color:"#F4FFF5";
+           color:"#F4FFF5";
            text-align:center;
            font-family:georgia;
          }
     p    {
            font-size:30px;
-           font-color:#F4FFF5;
+           color:#F4FFF5;
            text-align:center;
            font-family:georgia;
           }
