--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
          }
     p    {
            font-size:13px;
+           max-width: 150px;
            color:#F4FFF5;
            text-align:center;
            font-family:georgia;
