--- a/index.html
+++ b/index.html
@@ -27,11 +27,10 @@
   <body>
     
     <title>My Projects</title>
-    <h1><b>My Projects</b></h1>
-    <p> A documentary of projects I've built </p>
+    <h1><b>ABout Me </b></h1>
+    <p> The page entails my best effort to document some of the projects I've worked on </p>
     <br>
     <hr>
-    <br>
     <h2>Programmable Christmas Tree</h2>
     <br>
     <p>
