--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     body {background-color:#544899}
     h1   {
           font-size:40px;
-          color:"#F4FFF5";
+          color:"#CED6CE";
           text-align:center;
           font-family:georgia;
           }
@@ -16,7 +16,7 @@
          }
     p    {
            font-size:13px;
-           max-width: 150px;
+           max-width: 50%;
            color:#F4FFF5;
            text-align:center;
            font-family:georgia;
