--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body>
     
     <title>My Projects</title>
-    <h1><b>ABout Me </b></h1>
+    <h1><b>My Projects </b></h1>
     <p> The page entails my best effort to document some of the projects I've worked on </p>
     <br>
     <hr>
