--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     p    {
            font-size:13px;
            text-align:center;
-           max-width: 50%;
+           width: 50%;
            color:#F4FFF5;
            font-family:georgia;
           }
