--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
     
     <title>My Projects</title>
     <h1><b>My Projects </b></h1>
-    <p> The page entails my best effort to document some of the projects I've worked on </p>
+    <p><&emsp&emsp&emsp&emspThe page entails my best effort to document some of the projects I've worked on</p>
     <br>
     <hr>
     <h2>Programmable Christmas Tree</h2>
     <br>
-    <p>
+    <p>&emsp&emsp&emsp&emsp
       Consists of 5 circular levels and a star. Tree consists of 199 leds total, with 27 individually addressible options. Utilizes 4 shift registers (HC...)
       connected to 4 arduino pins for data, in addition to 4 clock and latch pins for the registers. Refresh rate of x hz.
     </p>
     <hr>
     <h2>Robot Arm</h2>
     <br>
-    <p>
+    <p>&emsp&emsp&emsp&emsp
       Consists of 5 motors (3 servo, 2 stepper) which give x degrees of freedoom. Able to pick up items weighting up to x kilograms.
     </p>
     <hr>
