--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
            font-family:georgia;
          }
     p    {
+           margin-top: 10px;
+           margin-bottom: 10px;
+           margin-right: 500px;
+           margin-left: 500px;
            font-size:13px;
            text-align:center;
-           width: 50%;
            color:#F4FFF5;
            font-family:georgia;
           }
@@ -28,19 +31,19 @@
     
     <title>My Projects</title>
     <h1><b>My Projects </b></h1>
-    <p><&emsp&emsp&emsp&emspThe page entails my best effort to document some of the projects I've worked on</p>
+    <p><The page entails my best effort to document some of the projects I've worked on</p>
     <br>
     <hr>
     <h2>Programmable Christmas Tree</h2>
     <br>
-    <p>&emsp&emsp&emsp&emsp
+    <p>
       Consists of 5 circular levels and a star. Tree consists of 199 leds total, with 27 individually addressible options. Utilizes 4 shift registers (HC...)
       connected to 4 arduino pins for data, in addition to 4 clock and latch pins for the registers. Refresh rate of x hz.
     </p>
     <hr>
     <h2>Robot Arm</h2>
     <br>
-    <p>&emsp&emsp&emsp&emsp
+    <p>
       Consists of 5 motors (3 servo, 2 stepper) which give x degrees of freedoom. Able to pick up items weighting up to x kilograms.
     </p>
     <hr>
