--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     p    {
            margin-top: 10px;
            margin-bottom: 10px;
-           margin-right: 500px;
-           margin-left: 500px;
+           margin-right: 300px;
+           margin-left: 300px;
            font-size:13px;
            text-align:center;
            color:#F4FFF5;
-           font-family:georgia;
+           font-family:helvetica;
           }
   </style>
   </head>
@@ -34,14 +34,14 @@
     <p><The page entails my best effort to document some of the projects I've worked on</p>
     <br>
     <hr>
-    <h2>Programmable Christmas Tree</h2>
+      <h2><i>Programmable Christmas Tree</i></h2>
     <br>
     <p>
       Consists of 5 circular levels and a star. Tree consists of 199 leds total, with 27 individually addressible options. Utilizes 4 shift registers (HC...)
       connected to 4 arduino pins for data, in addition to 4 clock and latch pins for the registers. Refresh rate of x hz.
     </p>
     <hr>
-    <h2>Robot Arm</h2>
+      <h2><u>Robot Arm</u></h2>
     <br>
     <p>
       Consists of 5 motors (3 servo, 2 stepper) which give x degrees of freedoom. Able to pick up items weighting up to x kilograms.
