--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <html lang = "en-US">
   <head>
   <style>
-    body {background-color:#F4FFF5}    <! ––#544899   #CED6CE   "#F4FFF5";––>
+    body {background-color:#544899}    <! ––#544899   #CED6CE   "#F4FFF5";––>
     h1   {
           font-size:40px;
-          color:#132B59;
+          color:#F4FFF5;
           text-align:center;
           font-family:georgia;
           }
     h2   {
            font-size:30px;
-           color:#132B59;
+           color:#F4FFF5;
            text-align:center;
            font-family:georgia;
          }
@@ -21,7 +21,7 @@
            margin-left: 300px;
            font-size:13px;
            text-align:center;
-           color:#132B59;
+           color:#F4FFF5;
            font-family:helvetica;
           }
   </style>
