--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang = "en-US">
   <head>
   <style>
-    body {background-color:#544899}    <! ––#544899   #CED6CE   "#F4FFF5";––>
+    body {background-color:#544899}  
     h1   {
           font-size:40px;
           color:#F4FFF5;
@@ -30,7 +30,7 @@
   <body>
     
     <title>My Projects</title>
-    <h1><b>My Projects </b></h1>
+      <h1><b>My Projects </b></h1>
     <p><The page entails my best effort to document some of the projects I've worked on</p>
     <br>
     <hr>
@@ -41,7 +41,7 @@
       connected to 4 arduino pins for data, in addition to 4 clock and latch pins for the registers. Refresh rate of x hz.
     </p>
     <hr>
-      <h2><u>Robot Arm</u></h2>
+      <h2><i>Robot Arm</i></h2>
     <br>
     <p>
       Consists of 5 motors (3 servo, 2 stepper) which give x degrees of freedoom. Able to pick up items weighting up to x kilograms.
