--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
            margin-left: 300px;
            font-size:13px;
            text-align:center;
-           color:#F4FFF5;
+           color:#DCDCE8;
            font-family:helvetica;
           }
   </style>
