--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 	<div id="head" class="parallax" parallax-speed="2">
 		<h1 id="logo" class="text-center">
 			<img class="img-circle" src="assets/images/guy.jpg" alt="">
-			<span class="title">Anthony Russel</span>
-			<span class="tagline">A mystery person<br>
-				<a href="">anthony.russel42@example.com</a></span>
+			<span class="title">My Projects</span>
+			<span class="tagline">Jakub J. Wolsza<br>
+				<a href="">jakubwolsza2023@u.northwestern.edu</a></span>
 		</h1>
 	</div>
 
@@ -271,7 +271,7 @@
 			<div class="col-md-6 widget">
 				<div class="widget-body">
 					<p class="text-right">
-						Copyright &copy; 2014, Your awesome name here<br> 
+						Copyright &copy; 2022, Jakub J. Wolsza<br> 
 						Design: <a href="http://www.gettemplate.com" rel="designer">Initio by GetTemplate</a> </p>
 				</div>
 			</div>
