--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <header id="header">
 	<div id="head" class="parallax" parallax-speed="2">
 		<h1 id="logo" class="text-center">
-			<img class="img-circle" src="assets/images/Profile_Pic.jpg" alt="">
+			<img class="img-circle" src="assets/images/Profile_Pic.JPG" alt="">
 			<span class="title">My Projects</span>
 			<span class="tagline">Jakub J. Wolsza<br>
 				<a href="">jakubwolsza2023@u.northwestern.edu</a></span>
